syntax = "proto3";

package ai_sapper_hcdc_common_model;

option java_multiple_files = true;
option java_package = "ai.sapper.hcdc.common.model";
option java_outer_classname = "DataBlockProtoBufs";

message DFSDataBlock {
  string filename = 1;
  uint32 blockSize = 2;
  uint32 blockDataSize = 3;
  uint64 createTimestamp = 4;
  uint64 updatedTimestamp = 5;
  uint32 replicaCount = 6;

  repeated DFSDataBlockLocation locations = 7;
  repeated DFSDataBlockTnx transactions = 8;
}

message DFSDataBlockTnx {
  string tnxId = 1;
  uint32 startOffset = 2;
  uint32 dataLength = 3;
  uint64 commitTimestamp = 4;
}

message DFSDataBlockLocation {
  string dataNodeHost = 1;
}
